[gd_scene load_steps=6 format=3 uid="uid://qsn2rg5cd6v"]

[ext_resource type="Script" path="res://sceen/zombie.gd" id="1_chaa0"]
[ext_resource type="Texture2D" uid="uid://dvgnk7egbdfui" path="res://zombie.png" id="1_yqt7l"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1lq8t"]
radius = 220.057

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7wo7"]
size = Vector2(16, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khw2b"]
size = Vector2(24, 24)

[node name="Zombie" type="CharacterBody2D"]
script = ExtResource("1_chaa0")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(7.15256e-07, 7.15256e-07)
scale = Vector2(1.5, 1.5)
texture = ExtResource("1_yqt7l")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_1lq8t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1.5)
shape = SubResource("RectangleShape2D_e7wo7")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("RectangleShape2D_khw2b")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
